General fixes: footnotes, references.

--- a/paper-v1.tex
+++ b/paper-v1.tex
@@ -47,24 +47,24 @@ Peer-review is a necessary and essential quality control step for scientific pub
 %
 %
 \section{Introduction}
-From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{BitcoinSatoshi}, blockchain technologies (BT) have spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum \cite{Ethereum}.
-Besides a growing number of applications ranging from business, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping}, creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to 'scientific self-correction' way before the final publication step and therefore help fixing the current reproducibility crisis in science.
+From its birth in 2008 as a distributed ledger for the peer-to-peer electronic cash system Bitcoin \cite{BitcoinSatoshi}, blockchain technologies have spread far beyond the sole cryptocurrency domain, in particular after the implementation of a general purpose smart contract functionality introduced by Ethereum \cite{Ethereum}.
+Besides a growing number of applications ranging from De-Fi, healthcare, music industry, government, identity to cite but a few, blockchain technology has recently started to catalyse the attention of the scientific community as well \cite{Bitcoin-Nature-focus,vanRossum2017-DigSci} with the promising potential of being a 'game changer' in outdated and broken scientific practices and leading towards open science \cite{AES}. Indeed, scholars have pointed out how the intrinsic characteristics of blockchain technology set the basis for a open science infrastructure \cite{ReviewBlockchain2019} in which decisional processes are transparent and therefore more democratically accessible to all the stakeholders (researchers, reviewers, funders, taxpayers). Those are: the consensus algorithm \cite{ConsAlg}, a deterministic computational trust that allows for \emph{decentralization}, for which there are no trusted third parties; the Proof of Existence (PoE) that via \emph{cryptographic hashing} and \emph{timestamping}, creates a digital footprint able to keep a traceable chronological record of research objects that cannot be altered or retrieved (due to its property of \emph{immutability} or \emph{append-only})\cite{ReviewBlockchain2019}. In particular, a 'blockchainified science'\cite{BlockchainforScience} could 'reduce waste'\cite{ReducingWaste-Lancet}, by disclosing each step in the research cycle to 'scientific self-correction' way before the final publication step and therefore help fixing the current reproducibility crisis in science.
 \newline A thorny issue in the academic system that can - and should - be tackled by blockchain concerns the status and accreditation of peer-review, the core process of scientific validation currently facing a crisis \cite{Gropp-PeerRevStress}.
-In this paper we propose a solution to the problem of reviewers recognition based on the principles of token economy \cite{TokenEcon} and in line with the values of open science.
+In this paper we propose a solution to the problem of reviewers recognition based on the principles of tokenomics \cite{TokenEcon} and in line with the values of open science.
 
 \section{Background}
 \subsection{Peer-review: present problems and mild solutions}
 Peer review is still the only quality control mechanism devoted to evaluate scientific outcomes. The purpose of peer review is "improving the quality of the published paper, determining the originality of the manuscript, determining the importance of the findings, detecting fraud, and detecting plagiarism." \cite{Gropp-PeerRevStress}. However, the system is 'ﬂawed' and outdated \cite{Smith2006} and presents multifaceted issues, here reviewed.
-\paragraph{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in PubMed for a time period of 30 years claims that the median review time is around 100 days\cite{Kendall-peerrev}.
-\paragraph{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science be published through sloppy and uncritical reviews.
-\paragraph{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review}.
-\paragraph{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review process} (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
-\paragraph{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?".
-\paragraph{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists. \cite{tragedy-reviewers}.
+\subsubsection{A slow multi-stage process.} The main issues affecting the effectiveness of peer-review is the delay between paper submission and journal acceptance for publication. The traditional peer-review process is completely controlled by the editor(s). The author(s) submits manuscript to the journal where an editorial team assesses if the paper meets the scopes of the journal and novelty criteria. If the editorial decision is to send the manuscript for review, the handling editor personally selects potential reviewers. The reviewers identity is usually only known to the editor but is hidden to the authors or the other reviewers themselves (single-blind review). Reviewers independently conduct their reviews by exposing in their reports strengths and weaknesses of the manuscript and sometimes substantially improving the draft. Depending on if the decision is a major or minor revision, authors are invited to re-submit a corrected or improved version of the manuscript. The same reviewers might be contacted again to continue the same peer-review process. This process can take multiple rounds and is a huge time investment both for authors and reviewers. An analysis of all papers published in \emph{PubMed} for a time period of 30 years claims that the median review time is around 100 days \cite{Kendall-peerrev}.
+\subsubsection{Lack of recognition.} Peer-reviewing is an invisible activity purely conducted on voluntary basis, neither paid by the journals or officially credited via standard scientific metrics (such as the ones that establish the 'impact factor' of an author). Thus, it does not lead to advancements in career or help securing grants. Researchers are motivated to do peer-review by a sense of belonging and a desire to 'give back' to the community. A major consequence of not promoting incentives for the quality (and quantity) of peer-reviews is to either slow down publication of potentially good research which awaits for validation or let bad science be published through sloppy and uncritical reviews.
+\subsubsection{Fraud and misconduct.} Due to the 'publish or perish culture' pressures, unethical behaviour from reviewers has been occasionally reported, from abusive behaviour towards authors \cite{Smith2006,tragedy-reviewers} to identity fraud. Some studies have reported an improvement in the transparency and civility of the review process when open reports are released according to the standards of \emph{open peer review}.
+\subsubsection{Social and cognitive biases.} Given the fact that anonymity is usually asymmetrically applied only for reviewers, many power related dynamics can influence the reviewers decision, such as gender or cultural discrimination and social prestige of the institution. To solve this problem some journals have implemented \emph{double-blind review} process (identity of both authors and reviewers are masked) which seems to reduce the bias towards minorities.
+\subsubsection{Peer reviews need to be...reviewed.} There is high variability in the reliability and depth of reviews and a recurrent question is: "Who watches the watchers?".
+\subsubsection{Need for more reviewers.} There is a disproportion between the progressive increase in journals publications and the number of experienced reviewers selected for the task which demands an expansion of the reviewer's pool including early career scientists \cite{tragedy-reviewers}.
 
 \subsection{Related work} Some mild attempts to credit peer review have been handled without much success by journals via attribution of virtual 'badges', certificates of performance, citation in annual editorials where performance, though, is assessed only in terms of quantity of reviews but not quality.
-\newline REVIEWER RECOGNITION SERVICE FOR PUBLISHERS\emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.}, integrated with ORCID (researcher identifier), that provides a reputational system of peer-review metric based on authors' prolificacy of reviews; \emph{Peerage of Science}\footnote[2]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.} and \emph{ResearchSquare}\footnote[3]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} that provide scientific peer review and also peer-reviews of the reviews.
-\newline Alternative proposals to improve the peer-review system with an incentivization mechanism on the blockchain have been made by Spearpoint \cite{ResearchCoin} who proposes \emph{r-coin} (for ‘ReviewCoin’ or ‘ResearchCoin’), a cryptocurrency that researchers earn for undertaking peer-reviews and that can used to pay for publication fees; \emph{ScienceMiles} \cite{ScienceMiles} is a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process; Avital \cite{AvitalToken} suggests a token-based peer-review payment system; \emph{INFINITCODEX (I8X)} \cite{I8X}, is a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users. \emph{Decentralized Science} \cite{DecentralSc2,DecentralSc1}, \emph{Pevo}\cite{Pevo}, \emph{CryptSubmit}\cite{CryptSubmit} and \emph{MarsChain}\cite{MarsChain} have instead respectively focused on features such as decentralization and security.
+\newline REVIEWER RECOGNITION SERVICE FOR PUBLISHERS\emph{Publons}\footnote[1]{\emph{Publons}.\textsc{URL:} https://publons.com/about/home.}, integrated with ORCID (researcher identifier), that provides a reputational system of peer-review metric based on authors' prolificacy of reviews.
+\newline Alternative proposals to ours to improve the peer-review system with an incentivization mechanism on the blockchain have been made by Spearpoint \cite{ResearchCoin} who proposes \emph{r-coin} (for ‘ReviewCoin’ or ‘ResearchCoin’), a cryptocurrency that researchers earn for undertaking peer-reviews and that can used to pay for publication fees; \emph{ScienceMiles} \cite{ScienceMiles} a cryptocurrency for incentivizing peer-reviews through a blockchain-based platform and an open peer-review process; Avital \cite{AvitalToken} suggests a token-based peer-review payment system; \emph{INFINITCODEX (I8X)} \cite{I8X}, a platform that promotes cooperative user behaviour through dynamic research papers that undergo  continuous peer review process. The system implements cryptoeconomical incentives for building reputation in the community of users. \emph{Decentralized Science} \cite{DecentralSc2,DecentralSc1}, \emph{Pevo} \cite{Pevo}, \emph{CryptSubmit} \cite{CryptSubmit} and \emph{MarsChain} \cite{MarsChain} have instead respectively focused on features such as decentralization and security.
 
 \section{System concept}
 In this paper we propose Ants-Review, a new incentivisation mechanism built on Ethereum that issues open peer-reviews to validate scientific papers while preserving the anonymity of its contributors. We imagine a final paper originating from the peer-review process as a complex system that emerges from the interactions between the authors and the reviewers, a whole that is more than the sum of its parts. Therefore, the name evokes an ant colony as a self-organising organism in which all micro-contributions of the individuals emerge into complex behaviour.
@@ -74,17 +74,16 @@ In this paper we propose Ants-Review, a new incentivisation mechanism built on E
 \subsection{Design}
 
 Here we describe the main features of Ants-Review.
-\paragraph{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are a prize or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[4]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[5]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, unit of values registered on a blockchain network, that represent the quantity and quality of a service within a network.
+\subsubsection{Incentivization and recognition.} A popular incentive model for open source software (OSS) is represented by Bounties. Bounties are a prize or monetary rewards given for completing a task before a deadline \cite{BountyGit}. Examples of such platforms that allow funders (bounty backers) to pay developers (bounty hunters) for open source contributions are \emph{Gitcoin}\footnote[2]{\emph{Gitcoin}.\textsc{URL:} https://gitcoin.co.} and \emph{The Bounties Network}\footnote[3]{\emph{The Bounties Network}.\textsc{URL:}https://bounties.network.}. Incentives can be represented by tokens, unit of values registered on a blockchain network, that represent the quantity and quality of a service within a network.
 \newline In the network of the scientific community reviewers provide a service and those who consume it (authors, journals) should be able to contribute with tokens. The amount of tokens reflects material and symbolic recognition of the performed work that can be statistically quantified for author-level metrics measuring the productivity and impact of a researcher.
 Thus, the system acts also as a reputation builder.
-\newline Moreover, to encourage commitment, reviewers who contribute consistently to multiple rounds of reviews on the same manuscript can have their tokens accrue interest over time (see 3.2).
 
-\paragraph{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[6]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare}  and \emph{Peerage of Science}, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
+\subsubsection{Transparency and re-usability of the records.} The peer-review history, including authors' replies and reviewers' recommendations, should be openly and permanently accessible to the community (in the form of 'open reports' of open peer-reviews) even before articles' publication in order to  make editorial decisions more democratic and prevent waste of knowledge. Following the example of models offered by journals peer-review consortia, such as the \emph{Neuroscience Peer Review Consortium}\footnote[4]{\emph{Neuroscience Peer Review Consortium}.\textsc{URL:}http://nprc.incf.org.} and independent companies like \emph{ResearchSquare} \footnote[5]{\emph{ResearchSquare}.\textsc{URL:}https://www.researchsquare.com.} and \emph{Peerage of Science} \footnote[6]{\emph{Peerage of Science}.\textsc{URL:} https://www.peerageofscience.org.}, that provide a scientific peer review service, peer-reviews in Ants-Review will be transferable across journals (like in 'cascading' or 'portable peer-reviews').
 
-\paragraph{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
+\subsubsection{Accountability via pseudo-anonymity.} In order to counteract malicious behaviour (see 2.1) affecting the integrity of the reviews but also to correctly attribute the intellectual contributions making sure there are no conflict of interest, it's important to be able to track back the identities of the contributors to a peer-review report. This is possible if the platform acts like a version control system where commits are permanent and their hashes timestamped. InterPlanetary File System (IPFS) \cite{IPFS} is a peer-to-peer hypermedia protocol for storing data in a distributed file system over the internet which guarantees data \emph{immutability} and unique file identification via cryptographic hashes. IPFS' hashes are then stored inside the smart contracts' state that is timestamped into the Ethereum blocks where  the transactions take place; there, data remain unaltered and indelible. This notarization process is called Proof of Existence (PoE)and allows manual verification of the existence of the document.
 \newline To prevent retaliation for negative peer-reviews and to promote the participation of early researchers who might feel intimidated to judge the scientific work of senior authors, the Ants-Review system maintains the privacy of both authors and reviewers in a double-blind approach via Ethereum’s Externally Owned Accounts(EOA) addresses, zero-knowledge proofs, a cryptographic method where a party can prove to another party the possession of certain information, like a secret key, without revealing that information (see § Privacy in 3.2).
 
-\paragraph{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1  Future developments). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
+\subsubsection{Inclusiveness via gamification.} As a final step we propose that all the community is involved in the process of peer-reviewing abolishing the editorial selection process ('open participation', 'open interaction', 'open platform' \cite{OPR-Ross-Hellauer}). In this way, the pool of reviewers is enriched and allows younger researchers to get the appropriate training through interactive feedback. Moreover, peer-reviews could be evaluated, commented, criticised by the other members of the scientific community, enabling a virtuous loop of verification. An interesting addition would be to introduce a rank of peer-reviews resulting from the community feedback via a voting process (see 4.1  Future developments). It's conceivable that the community members that engage in assessing the quality of peer-reviews could be incentivized as well. This solution would create a self-reinforcing ethical behaviour where the fair evaluation of peer-reviews would be also in the interest of the agents at play.
 
 \subsection{Implementation}
 
@@ -147,12 +146,12 @@ We have described how Ants-Review protocol can solve the limitations of the curr
 \subsection{Future developments}
 An interesting aspect of the protocol is the double function of an AntReview respectively as a bounty and as a pool to stake ERC20 tokens like Dai\footnote[14]{\emph{Dai}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/dai-module/dai-detailed-documentation.}. Moreover, the duration of peer-reviews consents to connect the protocol to De-Fi services with the possibility for the community to accrue interest over time via MakerDAO Dai Saving Rate (Pot\footnote[16]{\emph{Pot}.\textsc{URL:}https://docs.makerdao.com/smart-contract-modules/rates-module/pot-detailed-documentation.}) or Compound\footnote[17]{\emph{Compound}.\textsc{URL:}https://compound.finance.} to cite a few.
 Therefore, an ERC20 \emph{pool token} would be automatically released by the protocol, representing the accrued interest on the Anters' stake over time that can be traded, sold, or held as the Anter desires.
-A Decentralized Autonomous Organization (DAO) could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
-\newline Finally, a protocol upgrade inspired by Discover \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (Status \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}) and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
+A Decentralized Autonomous Organization (DAO) \cite{Wan} could be formed in the future to allow ANTS stakers to participate in the governance of important aspects of the protocol, from smart contracts upgrades to minor changes in settings across the protocol.
+\newline Finally, a protocol upgrade inspired by \emph{Discover} \footnote[18]{\emph{Discover.sol}.\textsc{URL:}https://github.com/dap-ps/discover/blob/master/contracts/Discover.sol.} (\emph{Status} \footnote[19]{\emph{Status}.\textsc{URL:}https://status.im/.}) and still under investigation would allow Anters to validate peer-reviews via an upvote/downvote system that will consent the protocol to automatically pay out the reward to the reviewers based on the votes associated with their peer-reviews.
 
 \subsection{A new community-driven standard?}
-As Tennant points out\cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
-In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
+As Tennant points out \cite{Tennant2017-F1000R}, a change is already happening in the publishing industry, especially with new born publishers opening up the review process (\emph{BioMed Central}, \emph{ELife}, \emph{Frontiers}, \emph{PeerJ}, \emph{F1000 Research}). If also pre-print platforms integrate peer-review into their platforms, the dissociation of initial scientific dissemination and scientific validation will force the publishing industry to adapt in order to keep up with the higher quality scientific process offered by alternative peer-review platforms and justify their added value (\emph{ibidem}).
+In our proposal we decoupled the peer-review process from the publishers giving it back to the scientific community and applying incentives from tokenomics. We foresee that the future will evolve towards community-driven peer-reviews: peer-reviews will be more and more independent from publishers \cite{DecoupJ}, and researchers will be the ones seeking the papers to review to build reputation within the community and not journals.
 \newline Enlarging the pool of reviewers to potentially an entire scientific community and accelerating the whole process might require a new standard for peer-reviews: for example some aspects might be taken over by AI assistants (such as the \emph{Artificial Intelligence Review Assistant (AIRA)}\footnote[20]{\emph{Artificial Intelligence to help meet global demand for high-quality, objective peer-review in publishing.} Posted on July 1, 2020 in \emph{Frontiers Announcements, Open Science and Peer Review}. \textsc{URL:} https://blog.frontiersin.org/2020/07/01/artificial-intelligence-peer-review-assistant-aira/.}) leaving to the reviewers the sole task of evaluating the content of a paper. Building smart-contracts for peer-reviews might set a first step in this standardization. We hope that soon the value of peer review as public good will be recognized by research funders and hiring committees.
 
 \section{Conclusion}
