--- a/ref4-discuss.bib
+++ b/ref4-discuss.bib
@@ -1,17 +1,26 @@
-@article{SquazzIncent, 
-author = {Squazzoni, Flaminio and Bravo, Giangiacomo and Takács, Károly}, 
-title = {{Does incentive provision increase the quality of peer review? An experimental study}}, 
-issn = {0048-7333}, 
-doi = {10.1016/j.respol.2012.04.014}, 
-abstract = {{Although peer review is crucial for innovation and experimental discoveries in science, it is poorly understood in scientific terms. Discovering its true dynamics and exploring adjustments which improve the commitment of everyone involved could benefit scientific development for all disciplines and consequently increase innovation in the economy and the society. We have reported the results of an innovative experiment developed to model peer review. We demonstrate that offering material rewards to referees tends to decrease the quality and efficiency of the reviewing process. Our findings help to discuss the viability of different options of incentive provision, supporting the idea that journal editors and responsible of research funding agencies should be extremely careful in offering material incentives on reviewing, since these might undermine moral motives which guide referees’ behavior.}}, 
-pages = {287--294}, 
-number = {1}, 
-volume = {42}, 
-journal = {Research Policy}, 
-keywords = {incentivization,peer-review}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/squazzoni2013.pdf}, 
-year = {2013}, 
-rating = {4}
+@article{DecoupJ, 
+author = {Priem, Jason and Hemminger, Bradley M.}, 
+title = {{Decoupling the scholarly journal}}, 
+doi = {10.3389/fncom.2012.00019}, 
+pmid = {22493574}, 
+pmcid = {PMC3319915}, 
+abstract = {{Although many observers have advocated the reform of the scholarly publishing system, improvements to functions like peer review have been adopted sluggishly. We argue that this is due to the tight coupling of the journal system: the system's essential functions of archiving, registration, dissemination, and certification are bundled together and siloed into tens of thousands of individual journals. This tight coupling makes it difficult to change any one aspect of the system, choking out innovation. We suggest that the solution is the “decoupled journal (DcJ).” In this system, the functions are unbundled and performed as services, able to compete for patronage and evolve in response to the market. For instance, a scholar might deposit an article in her institutional repository, have it copyedited and typeset by one company, indexed for search by several others, self-marketed over her own social networks, and peer reviewed by one or more stamping agencies that connect her paper to external reviewers. The DcJ brings publishing out of its current seventeenth-century paradigm, and creates a Web-like environment of loosely joined pieces—a marketplace of tools that, like the Web, evolves quickly in response to new technologies and users' needs. Importantly, this system is able to evolve from the current one, requiring only the continued development of bolt-on services external to the journal, particularly for peer review.}}, 
+pages = {19}, 
+volume = {6}, 
+journal = {Frontiers in Computational Neuroscience}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Priem-Decoupling%20the%20scholarly%20journal-2012-Frontiers%20in%20Computational%20Neuroscience.pdf}, 
+year = {2012}
+}
+@article{DAOContr, 
+author = {Morrison, Robbie and Mazey, Natasha C. H. L. and Wingreen, Stephen C.}, 
+title = {{The DAO Controversy: The Case for a New Species of Corporate Governance?}}, 
+doi = {10.3389/fbloc.2020.00025}, 
+abstract = {{This paper reviews the recent case of The DAO “hack” in June 2016 and analyzes The DAO's response in its time of crisis, and its implications for corporate and IT governance. There was no human-led governance in The DAO. Instead, The DAO placed its trust in the smart contract they had built together on the blockchain, which became its governance mechanism. The events that follow allow us to see hitherto unobservable organizational behaviors that are unique to trustless organizations, and hence The DAO gives us a glimpse at a new species of corporate governance. This paper explores the implications of these ideas: we propose the emergence of a spectrum of organizations based on the alienation of trust, we consider the economic impact and legality of decentralized autonomous organizations (DAOs), smart contracts, work and job design, and what happens when corporate governance is managed solely by IT governance.}}, 
+pages = {25}, 
+volume = {3}, 
+journal = {Frontiers in Blockchain}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Morrison-The%20DAO%20Controversy-%20The%20Case%20for%20a%20New%20Species%20of%20Corporate%20Governance--2020-Frontiers%20in%20Blockchain.pdf}, 
+year = {2020}
 }
 @article{Warne-RewRev, 
 author = {Warne, Verity}, 
@@ -28,23 +37,7 @@ local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Warn
 year = {2016}, 
 rating = {4}
 }
-@article{ZahIncent, 
-author = {Zaharie, Monica Aniela and Seeber, Marco}, 
-title = {{Are non-monetary rewards effective in attracting peer reviewers? A natural experiment}}, 
-issn = {0138-9130}, 
-doi = {10.1007/s11192-018-2912-6}, 
-pmid = {30546171}, 
-abstract = {{Editors of scientific journals meet increasing challenges to find peer reviewers. Rewarding reviewers has been proposed as a solution to incentives peer review, and journals have already started to offer different kinds of rewards, particularly non-monetary ones. However, research so far has mainly explored the efficacy of monetary rewards, while research on non-monetary rewards is barely absent. The goal of this article is to fill this gap by exploring whether and under what conditions a rather common non-monetary reward employed by journals, i.e., to recognize reviewers work by publishing their names on a yearly issue, is effective in increasing the willingness of scientists to become peer reviewers. We test the efficacy of three different reward settings identified in the literature: (1) engagement contingent, (2) task-completion contingent, and (3) performance contingent, through a natural experiment involving 1865 scientists in faculties of business and economics of Romanian universities. We explore whether reward efficacy varies across scientists depending on their gender, academic rank, research productivity, and type of institution to which they are affiliated. The results show that the performance contingency strongly reduces the number of respondents willing to become reviewers (− 60 \% compared to a no-reward setting), particularly males and research productive scientists. Scientists affiliated with private universities are strongly discouraged by the reward. In sum, the results suggest that non-monetary rewards are not necessarily effective, as in some cases they may actually discourage the most intrinsically motivated and competent reviewers.}}, 
-pages = {1587--1609}, 
-number = {3}, 
-volume = {117}, 
-journal = {Scientometrics}, 
-keywords = {incentivization}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Zaharie-Are%20non-monetary%20rewards%20effective%20in%20attracting%20peer%20reviewers-%20A%20natural%20experiment-2018-Scientometrics.pdf}, 
-year = {2018}, 
-rating = {5}
-}
-@article{10.1109/tcss.2019.2938190, 
+@article{Wang-DAO, 
 author = {Wang, Shuai and Ding, Wenwen and Li, Juanjuan and Yuan, Yong and Ouyang, Liwei and Wang, Fei-Yue}, 
 title = {{Decentralized Autonomous Organizations: Concept, Model, and Applications}}, 
 issn = {2329-924X}, 
@@ -55,30 +48,6 @@ number = {5},
 volume = {6}, 
 journal = {IEEE Transactions on Computational Social Systems}, 
 keywords = {DAO}, 
-local-url = {file://localhost/Users/bt_neurospin/Downloads/wang2019.pdf}, 
+local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Wang-Decentralized%20Autonomous%20Organizations-%20Concept,%20Model,%20and%20Applications-2019-IEEE%20Transactions%20on%20Computational%20Social%20Systems.pdf}, 
 year = {2019}
-}
-@article{10.1186/s41073-019-0063-9, 
-author = {Ross-Hellauer, Tony and Görögh, Edit}, 
-title = {{Guidelines for open peer review implementation}}, 
-doi = {10.1186/s41073-019-0063-9}, 
-pmid = {30858990}, 
-abstract = {{Open peer review (OPR) is moving into the mainstream, but it is often poorly understood and surveys of researcher attitudes show important barriers to implementation. As more journals move to implement and experiment with the myriad of innovations covered by this term, there is a clear need for best practice guidelines to guide implementation. This brief article aims to address this knowledge gap, reporting work based on an interactive stakeholder workshop to create best-practice guidelines for editors and journals who wish to transition to OPR. Although the advice is aimed mainly at editors and publishers of scientific journals, since this is the area in which OPR is at its most mature, many of the principles may also be applicable for the implementation of OPR in other areas (e.g., books, conference submissions).}}, 
-pages = {4}, 
-number = {1}, 
-volume = {4}, 
-journal = {Research Integrity and Peer Review}, 
-keywords = {open peer-review,OPR,peer-review}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Ross-Hellauer-Guidelines%20for%20open%20peer%20review%20implementation-2019-Research%20Integrity%20and%20Peer%20Review.pdf}, 
-year = {2019}, 
-rating = {4}
-}
-@article{10.2139/ssrn.3597399, 
-author = {Schrepel, Thibault and Buterin, Vitalik}, 
-title = {{Blockchain Code as Antitrust}}, 
-doi = {10.2139/ssrn.3597399}, 
-abstract = {{In this article, we show that blockchain can help in reaching the goals of antitrust law in situations where the rule of law does not apply. We detail what needs to be done to this end, from both a technical and legal standpoint.}}, 
-journal = {SSRN Electronic Journal}, 
-local-url = {file://localhost/Users/bt_neurospin/Documents/Papers%20Library/Schrepel-Blockchain%20Code%20as%20Antitrust-2020-SSRN%20Electronic%20Journal.pdf}, 
-year = {2020}
 }
